crates/cli/tests/snapshots/known_packages__wabt.snap
---
source: crates/cli/tests/known_packages.rs
expression: "format!(\"{meta:#}\")"
---
{
  "bindings": [
    {
      "interface_name": "bindings",
      "wasi": true
    }
  ],
  "commands": [
    {
      "name": "wat2wasm"
    },
    {
      "name": "wast2json"
    },
    {
      "name": "wasm2wat"
    },
    {
      "name": "wasm-interp"
    },
    {
      "name": "wasm-validate"
    },
    {
      "name": "wasm-strip"
    }
  ],
  "description": "The WebAssembly Binary Toolkit",
  "name": "wasmer/wabt",
  "version": "1.0.33"
}
