crates/cli/tests/snapshots/known_packages__wai_tutorial_01.snap
---
source: crates/cli/tests/known_packages.rs
expression: "format!(\"{meta:#}\")"
---
{
  "bindings": [
    {
      "interface_name": "hello-world",
      "wasi": false
    }
  ],
  "commands": [],
  "description": "Add two numbers",
  "name": "wai/tutorial-01",
  "version": "0.1.1"
}
