crates/cli/tests/snapshots/known_packages__wasmer_pack_cli.snap
---
source: crates/cli/tests/known_packages.rs
expression: "format!(\"{meta:#}\")"
---
{
  "bindings": [],
  "commands": [
    {
      "name": "wit-pack"
    }
  ],
  "description": "A code generator that lets you treat WebAssembly modules like native dependencies.",
  "name": "wasmer/wit-pack-cli",
  "version": "0.3.0-beta"
}
