crates/cli/tests/snapshots/known_packages__wasmer_pack_tarball.snap
---
source: crates/cli/tests/known_packages.rs
expression: "format!(\"{meta:#}\")"
---
{
  "bindings": [
    {
      "interface_name": "wit-pack",
      "wasi": false
    }
  ],
  "commands": [],
  "description": null,
  "name": "wasmer/wit-pack",
  "version": "0.3.0-beta"
}
