crates/cli/tests/snapshots/known_packages__wit_pack_cli.snap
---
source: crates/cli/tests/known_packages.rs
expression: "format!(\"{meta:#}\")"
---
{
  "bindings": [],
  "commands": [
    {
      "name": "wit-pack"
    }
  ],
  "description": null,
  "name": "wasmer/wit-pack-cli",
  "version": "0.3.0-beta"
}
